--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "push2server": "rsync -av /home/cgil/cgdev/golang/go-layers-stats/web/dist/ carto-prod-2021:/data/html_access/stats/"
   },
   "dependencies": {
     "echarts": "^5.3.3",
